test/types/enum/paramEnumCast.good
paramEnumCast.chpl:6: In function 'testEnum':
paramEnumCast.chpl:19: error: Initializing parameter 'i' to value not known at compile time
paramEnumCast.chpl:41: Function 'testEnum' instantiated as: testEnum(type t = gender, param e: gender = gender.decline, param expectStr: string = "decline", param expectVal = 0)
paramEnumCast.chpl:41: warning: enum->int cast was a surprise for decline
paramEnumCast.chpl:6: In function 'testEnum':
paramEnumCast.chpl:23: error: Initializing parameter 'e3' to value not known at compile time
paramEnumCast.chpl:41: Function 'testEnum' instantiated as: testEnum(type t = gender, param e: gender = gender.decline, param expectStr: string = "decline", param expectVal = 0)
paramEnumCast.chpl:41: warning: int->enum cast was a surprise for decline
paramEnumCast.chpl:6: In function 'testEnum':
paramEnumCast.chpl:19: error: can't cast from an abstract enum ('color') to int(64)
paramEnumCast.chpl:42: Function 'testEnum' instantiated as: testEnum(type t = color, param e: color = color.red, param expectStr: string = "red", param expectVal = 1)
